; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/mlx4/mlx4_ib/extr_mlx4_ib_cq.c_get_cqe_from_buf.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/mlx4/mlx4_ib/extr_mlx4_ib_cq.c_get_cqe_from_buf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx4_ib_cq_buf = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.mlx4_ib_cq_buf*, i32)* @get_cqe_from_buf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_cqe_from_buf(%struct.mlx4_ib_cq_buf* %0, i32 %1) #0 {
  %3 = alloca %struct.mlx4_ib_cq_buf*, align 8
  %4 = alloca i32, align 4
  store %struct.mlx4_ib_cq_buf* %0, %struct.mlx4_ib_cq_buf** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.mlx4_ib_cq_buf*, %struct.mlx4_ib_cq_buf** %3, align 8
  %6 = getelementptr inbounds %struct.mlx4_ib_cq_buf, %struct.mlx4_ib_cq_buf* %5, i32 0, i32 1
  %7 = load i32, i32* %4, align 4
  %8 = load %struct.mlx4_ib_cq_buf*, %struct.mlx4_ib_cq_buf** %3, align 8
  %9 = getelementptr inbounds %struct.mlx4_ib_cq_buf, %struct.mlx4_ib_cq_buf* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = mul nsw i32 %7, %10
  %12 = call i8* @mlx4_buf_offset(i32* %6, i32 %11)
  ret i8* %12
}

declare dso_local i8* @mlx4_buf_offset(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
